--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="site-container">
     <header class="header">
-  <img src="../img/BG.jpg" alt="" class="header__img">
+  <img src="img/BG.jpg" alt="" class="header__img">
   <div class="container">
     <a href="#" class="logo">
       digital <span class="white">
