--- a/index.html
+++ b/index.html
@@ -30,11 +30,285 @@
       </span>
     </a>
    <div class="header__video">
+     <span class="header__text">
+       <span class="text">
+               start
+       </span> </br>
+       <span class="number">
+         12
+       </span> </br>
+       <span class="text">
+             april
+       </span>
+     </span>
     <iframe src="https://www.youtube.com/embed/3nfadIylKwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <span class="header__text--two">
+      <span class="text">
+        start
+      </span> </br>
+      <span class="number">
+        12
+      </span> </br>
+      <span class="text">
+        april
+      </span>
+    </span>
    </div>
   </div>
 </header>
 
+    <section class="info">
+      <div class="container">
+        <h1 class="info__title">
+          fighter name
+        </h1>
+        <div class="text">
+          <p class="about">
+            About
+          </p>
+          <p class="about__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio optio, ducimus illum, atque amet saepe veniam impedit expedita repudiandae repellat ipsum omnis natus eos aut dolores, adipisci iure accusamus ab.
+          </p>
+        </div>
+        <p class="small__text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo fugit adipisci libero reprehenderit sit dignissimos pariatur aperiam, eius excepturi aspernatur ratione nemo odio? Iste sit dignissimos blanditiis assumenda corrupti libero.
+        </p>
+      </div>
+    </section>
+    <section class="collection">
+      <div class="container">
+        <div class="collection__title">
+          <h2 class="collection__title--one">
+            title
+          </h2>
+          <a href="#" class="collection__link">
+            Official Account
+          </a>
+        </div>
+        <div class="collection__inner">
+          <iframe width="240" height="240" src="https://www.youtube.com/embed/NTGe2recuUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="collection__inner-item">
+            <h2 class="collection__inner-title">
+              gold cards
+            </h2>
+            <ul class="collection__list">
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="collection__inner">
+          <iframe width="240" height="240" src="https://www.youtube.com/embed/NTGe2recuUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="collection__inner-item">
+            <h2 class="collection__inner-title">
+              gold cards
+            </h2>
+            <ul class="collection__list">
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="collection__inner">
+          <iframe width="240" height="240" src="https://www.youtube.com/embed/NTGe2recuUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="collection__inner-item">
+            <h2 class="collection__inner-title">
+              gold cards
+            </h2>
+            <ul class="collection__list">
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+              <li class="collection__list-item">
+                <div class="marker">
+                  1
+                </div>
+                 <a href="#" class="collection__list-link">
+                  link
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
   <div class="container"></div>
 </footer>
